feat: align snowplow with service platform conventions
