# docs/swagger.json
@@ -606,24 +606,6 @@
                 }
             }
         },
-        "/health": {
-            "get": {
-                "description": "Health HealthCheck",
-                "produces": [
-                    "application/json"
-                ],
-                "summary": "Liveness Endpoint",
-                "operationId": "health",
-                "responses": {
-                    "200": {
-                        "description": "OK",
-                        "schema": {
-                            "$ref": "#/definitions/handlers.serviceInfo"
-                        }
-                    }
-                }
-            }
-        },
         "/jq": {
             "post": {
                 "description": "This endpoint accepts a JSON body containing a JQ `query` and some `data`.\nIt evaluates the query against the data and returns the result as formatted JSON.",
@@ -762,20 +744,6 @@
                     }
                 },
                 "singular": {
-                    "type": "string"
-                }
-            }
-        },
-        "handlers.serviceInfo": {
-            "type": "object",
-            "properties": {
-                "build": {
-                    "type": "string"
-                },
-                "name": {
-                    "type": "string"
-                },
-                "namespace": {
                     "type": "string"
                 }
             }
